# serde-altar-monorepo

./: .gitignore  Cargo.toml  README.md
serde-altar/: Cargo.toml
serde-altar-derive/: Cargo.toml
serde-altar/src/de/: accessor.rs  deserialize.rs  deserializer.rs  mod.rs
serde-altar/src/ser/: serialize.rs  serializer.rs
src/: de.rs  error.rs  lib.rs  ser.rs  types.rs  vec.rs
src/de/: accessor.rs  deserialize.rs  deserializer.rs  mod.rs  visitor.rs
src/ser/: mod.rs  serialize.rs  serializer.rs
