[package]
name = "serde-altar"
version = "0.5.0"
authors = [
    "Stefano Pigozzi <me@steffo.eu>",
]
edition = "2021"
description = "Serde data format for Terraria world files"
readme = "README.md"
repository = "https://github.com/Steffo99/serde-altar/"
license = "MIT OR Apache-2.0"
keywords = [
    "serde",
    "terraria",
]
categories = [
    "encoding",
    "games",
]
exclude = [
    ".idea/",
]
rust-version = "1.56"

[dependencies]
serde = "1.0.136"
leb128 = "0.2.5"
