[package]
name = "serde-altar-derive"
version = "0.5.1"
edition = "2021"
authors = [
    "Stefano Pigozzi <me@steffo.eu>",
]
description = "Serde derive macros for Terraria world files"
readme = "README.md"
repository = "https://github.com/Steffo99/serde-altar/"
license = "MIT OR Apache-2.0"
keywords = [
    "serde",
    "terraria",
]
categories = [
    "encoding",
    "games",
]
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
